# RT4K-WIFI-SD-CARD

./: .gitignore  CMakeLists.txt  README.md  RT4K-WIFI-SD-CARD.ino  WebServer.cpp  WebServer.h  config.cpp  network.cpp  network.h  partitions.csv  sdControl.cpp  sdControl.h  sdkconfig.defaults
arduino-old/: WebServer.h  config.cpp  config.h  sdControl.cpp  sdControl.h
components/board_pins/include/: pins.h
components/network/: CMakeLists.txt  network.c
components/network/include/: network.h
components/rt4k_config/: CMakeLists.txt  rt4k_config.c
components/rt4k_config/include/: rt4k_config.h
components/sd_control/: CMakeLists.txt  sd_control.c
components/sd_control/include/: sd_control.h
components/web_server/: CMakeLists.txt  web_server.c
components/web_server/include/: web_server.h
data/: index.htm  settings.htm  video_timings_calculator.htm
data/css/: index.css
data/js/: index.js
main/: CMakeLists.txt  Kconfig.projbuild  main.c
tests/: conftest.py  requirements.txt  test_cors.py  test_file_ops.py  test_ota.py  test_sd_access.py  test_static.py  test_stress.py  test_wifi.py
tools/: prepare_web_assets.py
tools/Flash/: CMD.txt  install-all-4M  install-all-4M custom-spiifs.bat  merge_bin.bat
tools/Flash/binary-merged/: flash-merged.bat  flash-merged.sh
tools/Flash/test/: index.htm
